SERVER-6540 fix writeback hangs when messages are too big